--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
 >
     <data>
-        <variable name="model" type="com.pierbezuhoff.dodeca.ui.MainViewModel"/>
+        <variable name="mainViewModel" type="com.pierbezuhoff.dodeca.ui.MainViewModel"/>
         <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.ui.dodeca.DodecaViewModel"/>
         <import type="com.pierbezuhoff.dodeca.data.Shape"/>
     </data>
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:selectedItemPosition="@={Shape.toOrdinal(dodecaViewModel.shape)}"
-                android:onItemSelected="@{(parent, view, position, id) -> model.showBottomBar()}"
+                android:onItemSelected="@{(parent, view, position, id) -> mainViewModel.showBottomBar()}"
                 android:contentDescription="@{@string/shape_spinner_title}"
         />
         <ImageButton
