--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -5,7 +5,7 @@
 >
     <data>
         <variable name="mainViewModel" type="com.pierbezuhoff.dodeca.ui.MainViewModel"/>
-        <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.ui.dodeca.DodecaViewModel"/>
+        <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.ui.dodecaview.DodecaViewModel"/>
         <import type="com.pierbezuhoff.dodeca.data.Shape"/>
     </data>
     <LinearLayout
