--- a/app/src/main/res/layout/activity_dduchooser.xml
+++ b/app/src/main/res/layout/activity_dduchooser.xml
@@ -1,21 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
->
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/dir_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-        />
-        <View style="@style/dividerHorizontal"/>
-        <com.pierbezuhoff.dodeca.ui.dduchooser.AutofitGridRecyclerView
-                android:id="@+id/ddu_recycler_view"
-                android:scrollbars="vertical"
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+        <data>
+                <variable name="viewModel" type="com.pierbezuhoff.dodeca.ui.dduchooser.DduChooserViewModel"/>
+        </data>
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-        />
-</LinearLayout>
+        >
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                >
+                        <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/dir_recycler_view"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="8dp"
+                        />
+                        <View style="@style/dividerHorizontal"/>
+                        <com.pierbezuhoff.dodeca.ui.dduchooser.AutofitGridRecyclerView
+                                android:id="@+id/ddu_recycler_view"
+                                android:scrollbars="vertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                        />
+                </LinearLayout>
+                <ProgressBar
+                        style="?android:attr/progressBarStyle"
+                        android:id="@+id/ddus_loading_progress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:showWhen="@{viewModel.ddusLoading}"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
