--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/apk/res-auto"
 >
     <data>
-        <variable name="mainViewModel" type="com.pierbezuhoff.dodeca.ui.MainViewModel"/>
-        <variable name="dodecaViewModel" type="com.pierbezuhoff.dodeca.ui.dodecaview.DodecaViewModel"/>
+        <variable name="viewModel" type="com.pierbezuhoff.dodeca.ui.MainViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context=".ui.MainActivity"
     >
-
-        <com.pierbezuhoff.dodeca.ui.dodecaview.DodecaView
-                android:id="@+id/dodeca_view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:mainViewModel="@{mainViewModel}"
-                app:dodecaViewModel="@{dodecaViewModel}"
-        />
-
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+        >
+            <TextView
+                    android:text="@{viewModel.status}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+            />
+        </LinearLayout>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
-                android:id="@+id/ddu_loading_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -41,71 +33,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:showWhen="@{dodecaViewModel.dduLoading}"
+                app:showWhen="@{viewModel.loading}"
         />
-
-        <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:gravity="top|end"
-                android:background="@color/translucentLightBackground"
-                app:showWhen="@{mainViewModel.showStat}"
-        >
-            <TextView
-                    android:id="@+id/n_updates"
-                    android:text="@{@string/stat_n_updates_text(dodecaViewModel.nUpdates)}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-            />
-            <TextView
-                    android:id="@+id/updates_x"
-                    android:text="@{dodecaViewModel.dTime == null ? @string/stat_x_updates_per_initial : @string/stat_x_updates_per_text(dodecaViewModel.statTimeDelta, dodecaViewModel.dTime)}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-            />
-        </LinearLayout>
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".ui.MainActivity"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/coordinatorLayout">
-
-            <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/bar"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_gravity="bottom"
-                    app:buttonGravity="bottom"
-                    android:background="@color/toolbarColor"
-                    app:contentInsetLeft="0dp"
-                    app:contentInsetRight="0dp"
-                    app:contentInsetStart="0dp"
-                    app:contentInsetStartWithNavigation="0dp"
-                    app:contentInsetEnd="0dp"
-                    app:contentInsetEndWithActions="0dp"
-                    app:showWhen="@{mainViewModel.bottomBarShown}"
-            >
-                <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                >
-                    <include layout="@layout/toolbar1" bind:mainViewModel="@{mainViewModel}"
-                             bind:dodecaViewModel="@{dodecaViewModel}"/>
-                    <View style="@style/dividerHorizontal"/>
-                    <include layout="@layout/toolbar2" bind:mainViewModel="@{mainViewModel}"
-                             bind:dodecaViewModel="@{dodecaViewModel}"/>
-                </LinearLayout>
-            </androidx.appcompat.widget.Toolbar>
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
