--- a/app/src/main/res/layout/activity_ddu_chooser.xml
+++ b/app/src/main/res/layout/activity_ddu_chooser.xml
@@ -17,6 +17,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="8dp"
+                                app:showWhen="@{viewModel.showFolders}"
                         />
                         <View style="@style/dividerHorizontal"/>
                         <com.pierbezuhoff.dodeca.ui.dduchooser.AutofitGridRecyclerView
