--- a/app/src/main/res/values/defaults.xml
+++ b/app/src/main/res/values/defaults.xml
@@ -15,6 +15,7 @@
     <bool name="autocenter_preview">true</bool>
     <string name="n_preview_updates" translatable="false">100</string>
     <bool name="preview_smart_updates">true</bool>
+    <bool name="show_folders">true</bool>
     <integer name="version_code">0</integer>
     <integer name="stat_time_delta">20</integer>
 </resources>
