--- a/app/src/main/res/layout/ddu_item.xml
+++ b/app/src/main/res/layout/ddu_item.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+>
     <data/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
     >
+        <ImageView
+                android:id="@+id/ddu_preview"
+                android:contentDescription="@{@string/ddu_preview_title}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/ddu_entry"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+        />
         <ProgressBar
                 android:id="@+id/preview_progress"
                 android:layout_width="wrap_content"
@@ -19,19 +35,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/ddu_entry"
-        />
-        <ImageView
-                android:id="@+id/ddu_preview"
-                android:contentDescription="@{@string/ddu_preview_title}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/ddu_entry"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
         />
         <TextView
                 android:id="@+id/ddu_entry"
