--- a/app/src/main/res/values/defaults.xml
+++ b/app/src/main/res/values/defaults.xml
@@ -8,6 +8,7 @@
     <bool name="autocenter_always">true</bool>
     <string name="speed" translatable="false">1</string>
     <string name="skip_n" translatable="false">0</string>
+    <string name="skip_n_timeout" translatable="false">60</string>
     <string name="canvas_factor" translatable="false">2</string>
     <bool name="show_stat">false</bool>
     <bool name="prefer_recent_ddu">true</bool>
