--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -65,5 +65,15 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/autocenter_button_title}"
         />
+        <ImageButton
+                android:id="@+id/screenshot_button"
+                android:src="@drawable/ic_screenshot"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@{@string/screenshot_button_title}"
+        />
     </LinearLayout>
 </layout>
