updated dependencies and fixed deprecations

--- a/app/src/main/res/menu/ddu_chooser_appbar.xml
+++ b/app/src/main/res/menu/ddu_chooser_appbar.xml
@@ -29,12 +29,12 @@
             android:icon="@drawable/ic_add_folder"
             app:showAsAction="ifRoom"
     />
-    <item
-            android:id="@+id/delete_ddus"
-            android:title="@string/delete_ddus"
-            android:icon="@drawable/ic_delete"
-            app:showAsAction="ifRoom"
-    />
+<!--    <item-->
+<!--            android:id="@+id/delete_ddus"-->
+<!--            android:title="@string/delete_ddus"-->
+<!--            android:icon="@drawable/ic_delete"-->
+<!--            app:showAsAction="ifRoom"-->
+<!--    />-->
     <item
             android:id="@+id/toggle_folders"
             android:title="@string/toggle_folders"
