--- a/app/src/main/res/layout/activity_dodeca_edit.xml
+++ b/app/src/main/res/layout/activity_dodeca_edit.xml
@@ -4,40 +4,77 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:bind="http://schemas.android.com/apk/res-auto"
->
+        >
     <data>
-        <variable name="model" type="com.pierbezuhoff.dodeca.ui.dodecaedit.DodecaEditViewModel"/>
+        <variable name="viewModel" type="com.pierbezuhoff.dodeca.ui.dodecaedit.DodecaEditViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context=".ui.dodecaedit.DodecaEditActivity"
-    >
-        <com.pierbezuhoff.dodeca.ui.dodecaedit.DodecaEditView
-                android:id="@+id/dodeca_edit_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/edit_bar"
-        />
+            >
+
+    <com.pierbezuhoff.dodeca.ui.dodecaedit.DodecaEditView
+            android:id="@+id/dodeca_edit_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:viewModel="@{viewModel}"
+            />
+
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:id="@+id/ddu_loading_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:showWhen="@{viewModel.dduLoading}"
+            />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.MainActivity"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/edit_bar"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_gravity="bottom"
                 app:buttonGravity="bottom"
-                android:background="@color/toolbarColor"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@color/editToolbarColor"
                 app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
                 app:contentInsetEnd="0dp"
                 app:contentInsetEndWithActions="0dp"
-        >
-            <include layout="@layout/toolbar_edit" bind:model="@{model}"/>
+                >
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                <include layout="@layout/toolbar_edit1" bind:viewModel="@{viewModel}"/>
+                <View style="@style/dividerHorizontal"/>
+                <include layout="@layout/toolbar_edit2" bind:viewModel="@{viewModel}"/>
+            </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
