--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -14,16 +14,6 @@
             android:layout_height="wrap_content"
     >
         <ImageButton
-                android:id="@+id/choose_color_button"
-                android:src="@drawable/ic_choose_color"
-                app:backgroundTint="@color/toolbarColor"
-                android:padding="8dp"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@{@string/choose_color_button_title}"
-        />
-        <ImageButton
                 android:id="@+id/trace_button"
                 android:src="@drawable/ic_trace"
                 app:backgroundTint="@color/toolbarColor"
@@ -74,6 +64,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/screenshot_button_title}"
+        />
+        <ImageButton
+                android:id="@+id/restart_button"
+                android:src="@drawable/ic_restore"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@{@string/ellipsis}"
         />
     </LinearLayout>
 </layout>
