--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -14,6 +14,16 @@
             android:layout_height="wrap_content"
     >
         <ImageButton
+                android:id="@+id/edit_button"
+                android:src="@drawable/ic_choose_color"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@{@string/ellipsis}"
+                />
+        <ImageButton
                 android:id="@+id/trace_button"
                 android:src="@drawable/ic_trace"
                 app:backgroundTint="@color/toolbarColor"
@@ -44,16 +54,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/clear_button_title}"
-        />
-        <ImageButton
-                android:id="@+id/autocenter_button"
-                android:src="@drawable/ic_autocenter"
-                app:backgroundTint="@color/toolbarColor"
-                android:padding="8dp"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@{@string/autocenter_button_title}"
         />
         <ImageButton
                 android:id="@+id/screenshot_button"
