--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -15,13 +15,25 @@
     >
         <ImageButton
                 android:id="@+id/edit_button"
+                android:src="@drawable/ic_edit"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@{@string/edit_button_title}"
+                />
+        <ImageButton
+                android:id="@+id/edit_circles_colors_button"
                 android:src="@drawable/ic_choose_color"
                 app:backgroundTint="@color/toolbarColor"
                 android:padding="8dp"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="@{@string/ellipsis}"
+                android:contentDescription="@{@string/edit_circles_colors_button_title}"
+
+                android:visibility="gone"
                 />
         <ImageButton
                 android:id="@+id/trace_button"
@@ -66,6 +78,16 @@
                 android:contentDescription="@{@string/screenshot_button_title}"
         />
         <ImageButton
+                android:id="@+id/autocenter_button"
+                android:src="@drawable/ic_autocenter"
+                app:backgroundTint="@color/toolbarColor"
+                android:padding="8dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@{@string/autocenter_button_title}"
+                />
+        <ImageButton
                 android:id="@+id/restart_button"
                 android:src="@drawable/ic_restore"
                 app:backgroundTint="@color/toolbarColor"
@@ -74,6 +96,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/ellipsis}"
-        />
+
+                android:visibility="gone"
+                />
     </LinearLayout>
 </layout>
