--- a/app/src/main/res/layout/toolbar_edit1.xml
+++ b/app/src/main/res/layout/toolbar_edit1.xml
@@ -13,6 +13,17 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+
+    <ImageButton
+            android:id="@+id/done_button"
+            android:src="@drawable/ic_done"
+            app:backgroundTint="@color/editToolbarColor"
+            android:padding="8dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@{@string/done_button_title}"
+            />
     <ImageButton
             android:id="@+id/navigate_mode_button"
             android:src="@drawable/ic_move"
@@ -21,7 +32,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@{@string/ellipsis}"
+            android:contentDescription="@{@string/navigate_mode_button_title}"
             app:tintEnabled="@{viewModel.editingMode == EditingMode.NAVIGATE}"
             app:defaultTint="@{@color/editToolbarColor}"
             app:darkerTint="@{@color/darkerEditToolbarColor}"
@@ -34,7 +45,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@{@string/ellipsis}"
+            android:contentDescription="@{@string/multiselect_mode_button_title}"
             app:tintEnabled="@{viewModel.editingMode == EditingMode.MULTISELECT}"
             app:defaultTint="@{@color/editToolbarColor}"
             app:darkerTint="@{@color/darkerEditToolbarColor}"
@@ -51,27 +62,22 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
             app:tintEnabled="@{viewModel.editingMode == EditingMode.COPY}"
             app:defaultTint="@{@color/editToolbarColor}"
             app:darkerTint="@{@color/darkerEditToolbarColor}"
+
+            android:visibility="gone"
             />
 
-<!--    <ImageButton-->
-<!--            android:id="@+id/new_circle_button"-->
-<!--            android:src="@drawable/ic_new_circle"-->
-<!--            app:backgroundTint="@color/editToolbarColor"-->
-<!--            android:padding="8dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:contentDescription="@{@string/ellipsis}"-->
-<!--            />-->
     <ImageButton
-            android:id="@+id/done_button"
-            android:src="@drawable/ic_done"
+            android:id="@+id/new_circle_button"
+            android:src="@drawable/ic_new_circle"
             app:backgroundTint="@color/editToolbarColor"
             android:padding="8dp"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@{@string/ellipsis}"
+
+            android:visibility="gone"
             />
+
 </LinearLayout>
 </layout>
