--- a/app/src/main/res/layout/activity_dodeca_edit.xml
+++ b/app/src/main/res/layout/activity_dodeca_edit.xml
@@ -47,6 +47,7 @@
             android:layout_height="match_parent"
             tools:context=".ui.MainActivity"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/coordinatorLayout"
             >
 
         <androidx.appcompat.widget.Toolbar
