--- a/app/src/main/res/layout/activity_dodeca_view.xml
+++ b/app/src/main/res/layout/activity_dodeca_view.xml
@@ -73,7 +73,8 @@
             android:layout_height="match_parent"
             tools:context=".ui.MainActivity"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/coordinatorLayout">
+            android:id="@+id/coordinatorLayout"
+            >
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/bar"
