--- a/app/src/main/res/layout/toolbar_edit1.xml
+++ b/app/src/main/res/layout/toolbar_edit1.xml
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             >
 
+    <!-- BUG: tool tips are not working -->
     <ImageButton
             android:id="@+id/done_button"
             android:src="@drawable/ic_done"
@@ -24,7 +25,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@{@string/done_button_title}"
             />
-    <ImageButton
+        <ImageButton
             android:id="@+id/navigate_mode_button"
             android:src="@drawable/ic_move"
             app:backgroundTint="@color/editToolbarColor"
