--- a/app/src/main/res/layout/mass_editor_row.xml
+++ b/app/src/main/res/layout/mass_editor_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data>
     </data>
@@ -33,7 +34,7 @@
                 android:textOn=""
                 android:textOff=""
                 android:contentDescription="@{@string/circle_visibility_description}"
-                app:layout_constraintStart_toEndOf="@+id/circle_checkbox"
+                app:layout_constraintStart_toEndOf="@id/circle_checkbox"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -47,7 +48,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/circle_layout_description}"
                 tools:layout_editor_absoluteY="0dp"
-                app:layout_constraintStart_toEndOf="@+id/circle_visibility"
+                app:layout_constraintStart_toEndOf="@id/circle_visibility"
                 android:layout_marginStart="16dp"
         >
             <ImageView
@@ -74,41 +75,59 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/circle_image"
+                    app:layout_constraintStart_toEndOf="@id/circle_image"
                     android:layout_marginStart="16dp"
                     android:text="@string/circle_name_initial_text"
                     android:textSize="@dimen/small_text_size"
                     android:ellipsize="end"
             />
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <Space
-                android:layout_width="@dimen/inf_hspace"
+        <android.widget.Space
+                android:id="@+id/mass_editor_space"
+                android:layout_width="0px"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/circle_layout"
-                app:layout_constraintEnd_toStartOf="@id/expand_group"
+                app:layout_constraintEnd_toStartOf="@id/circle_rule"
         />
+        <TextView
+                android:id="@+id/circle_rule"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/mass_editor_space"
+                app:layout_constraintEnd_toStartOf="@id/expand_group"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="24dp"
+                android:text="@string/circle_name_initial_text"
+                android:textSize="@dimen/tiny_text_size"
+                android:ellipsize="end"
+                />
+
         <ToggleButton
                 android:id="@+id/expand_group"
+                android:layout_width="24dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
                 android:background="@color/lightGray"
                 android:button="@drawable/expand_group"
                 android:checked="false"
-                android:layout_width="24dp"
-                android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"
-                android:textOn=""
-                android:textOff=""
                 android:contentDescription="@{@string/expand_group_description}"
-                android:layout_marginBottom="8dp"
+                android:paddingStart="24dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="24dp"
+                android:paddingBottom="8dp"
+                android:textOff=""
+                android:textOn=""
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
-        />
+                app:layout_constraintStart_toEndOf="@id/circle_rule"
+                app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
