--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="small_text_size">12sp</dimen>
+    <dimen name="tiny_text_size">10sp</dimen>
     <dimen name="inf_hspace">1000dp</dimen>
 </resources>
