--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -22,9 +22,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/edit_button_title}"
+
+                android:visibility="gone"
                 />
         <ImageButton
-                android:id="@+id/edit_circles_colors_button"
+                android:id="@+id/mass_editor_button"
                 android:src="@drawable/ic_choose_color"
                 app:backgroundTint="@color/toolbarColor"
                 android:padding="8dp"
@@ -33,7 +35,6 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/mass_editor_button_title}"
 
-                android:visibility="gone"
                 />
         <ImageButton
                 android:id="@+id/trace_button"
