--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -13,18 +13,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
     >
-        <ImageButton
-                android:id="@+id/edit_button"
-                android:src="@drawable/ic_edit"
-                app:backgroundTint="@color/toolbarColor"
-                android:padding="8dp"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@{@string/edit_button_title}"
-
-                android:visibility="gone"
-                />
+<!--        <ImageButton-->
+<!--                android:id="@+id/edit_button"-->
+<!--                android:src="@drawable/ic_edit"-->
+<!--                app:backgroundTint="@color/toolbarColor"-->
+<!--                android:padding="8dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:contentDescription="@{@string/edit_button_title}"-->
+<!--                -->
+<!--                android:visibility="gone"-->
+<!--                />-->
         <ImageButton
                 android:id="@+id/mass_editor_button"
                 android:src="@drawable/ic_choose_color"
@@ -34,7 +34,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/mass_editor_button_title}"
-
                 />
         <ImageButton
                 android:id="@+id/trace_button"
