--- a/app/src/main/res/values/defaults.xml
+++ b/app/src/main/res/values/defaults.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="redraw_trace">true</bool>
+    <bool name="redraw_trace">false</bool>
     <bool name="show_all_circles">false</bool>
     <bool name="reverse_motion">false</bool>
     <bool name="autosave">false</bool>
@@ -16,7 +16,7 @@
     <bool name="autocenter_preview">true</bool>
     <string name="n_preview_updates" translatable="false">100</string>
     <bool name="preview_smart_updates">true</bool>
-    <bool name="show_folders">true</bool>
+    <bool name="show_folders">false</bool>
     <integer name="version_code">0</integer>
     <integer name="stat_time_delta">20</integer>
 </resources>
