added preferences for circlegroup implementations in non-limited version

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -89,4 +89,10 @@
         <item>600</item>
     </string-array>
 
+    <string-array name="circlegroup_implementations">
+        <item>planar-sequential</item>
+        <item>planar-sequential-rough</item>
+        <item>projective</item>
+    </string-array>
+
 </resources>
